--- a/Dia6/blogFinal/login.html
+++ b/Dia6/blogFinal/login.html
@@ -5,12 +5,14 @@
 	<title>Login</title>
 </head>
 <body>
-	<form action="acceso.php" METHOD="POST">
+	<form action="acceso.php" method="POST">
 		<input type="text" name="pUsuario" placeHolder="Usuario"/>
 		<br/>
 		<input type="password" name="pContra" placeHolder="Contraseña"/>
 		<br/>
 		<input type="submit" value="Ingresar al Blog"/>
 	</form>
+	<a href="index.php">Ir al Blog</a>
+
 </body>
 </html>
