--- a/Dia6/blogFinal/login.html
+++ b/Dia6/blogFinal/login.html
@@ -5,6 +5,9 @@
 	<title>Login</title>
 </head>
 <body>
+	<meta charset="UTF-8">  
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
 	<form action="acceso.php" method="POST">
 		<input type="text" name="pUsuario" placeHolder="Usuario"/>
 		<br/>
